# my_os

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  Makefile.backup  README.md  bootloader.asm  configure  errors.c  errors.h  gdt.c  gdt.h  kernel.c  linker.ld  main.c  multiboot.asm  shell.c  shell.h  start.asm  torun.txt
.github/workflows/: c-cpp.yml
drivers/: disk.c  disk.h  io.h  keyboard.c  keyboard.h  pci.c  pci.h  pit.c  pit.h  screen.c  screen.h
filesystem/: fat32.c  fat32.h
interupts/: idt.c  idt.h  interupts_handler.c  interupts_handler.h  isr_stubs.asm  pic.c  pic.h
iso/boot/grub/: grub.cfg
memory/: kmalloc.c  kmalloc.h  pmm.c  pmm.h  utills.c  utills.h  vmm.c  vmm.h
processes/: Design  context_switch.asm  pcb.c  pcb.h  pid.c  pid.h  priority.h  process.c  process.h  process_state.h  scheduler.c  scheduler.h  ‫דיאגרמה ללא שם‬.drawio
processes/design/: process_design  process_design.drawio  process_functionality.drawio
scripts/: pre-commit.sh
std/: assert.c  assert.h  stdarg.h  stdbool.h  stdint.h  stdio.c  stdio.h  stdlib.c  stdlib.h  string.c  string.h
tests/: README.md  disk_tests.c  disk_tests.h  host_test_verifier  host_test_verifier.c  simple_test_kernel.c  simple_test_multiboot.asm  test_framework.h  test_kernel.c  test_multiboot.asm
tests/memory/: test_kmalloc.h  test_pmm.h  test_vmm.h
